Added responsive layout for smaller screens and improved spacing and alignment for navigation links

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <div class="footer-container">
       <!-- Logo and Contact Information -->
       <div class="footer-logo">
-        <img src="images/logo.png" alt="ColorCrest Logo" width="150">
+        <img src="images/colorcrest logo.png" alt="ColorCrest Logo" width="150">
         <p>Phone: +2547 99 194 641</p>
         <p>Email: colorcrest@gmail.com</p>
         <p>Address:Nairobi, Kenya</p>
