linked our catalogue with shop now

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          vision to life. Whether it's a cozy home interior or a bold exterior transformation, ColorCrest has
          the perfect solution for every surface.</p>
          <a href="about.html" class="h-btn">Learn more</a>
-         <a href="c"class="h-btn">Shop Now</a>
+         <a href="catalogue.html"class="h-btn">Shop Now</a>
 
     </div>
     <a href="index.html"><img src="images/hero.jpg" alt=""></a>
